fix: hide scrollbar on spaces sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,11 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #232428;
 }
+
+.scrollbar-none {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
+}
